src/component/ProjectsPage/FeaturedProjects/style.css
.projects-page-container {
  min-width: 1107px;
  width: calc(100vw - 36vh);
}

.featured-projects {
  width: 120vw;
  display: flex;
}

.projects-title {
  color: #187dff;
  font-weight: 700;
}

#projects-navbar {
  padding-top: 2%;
}

.projects-text {
  color: #000;
  font-size: 2.5vh;
  margin-top: 5%;
  max-width: 400px;
}

.featured-projects-text {
  margin-left: 4%;
  width: min-content;
  min-width: 396px;
  margin-top: -3%;
}

.projects-back img {
  transform: rotate(180deg);
}

.featured-project-buttons {
  margin-top: 15%;
}

.projects-button {
  background: #ffffff;
  border: 1px solid #111111;
  width: 90px;
  height: 90px;
  box-shadow: -0.5rem 0.6rem;
}

.projects-forward {
  margin-right: 40px;
}

.project {
  display: flex;
  margin-top: 10px;
}

.project-text h1 {
  font-family: "Space Mono 700";
  font-size: 7vh;
}

.project-team {
  font-family: "Space Mono";
  font-size: 3vh;
  color: #000;
  text-align: left;
  text-transform: none;
  font-weight: 400;
}

.project-text p {
  max-width: 250px;
  font-size: 2vh;
}

.view-project-button {
  color: black;
  background-color: white;
  border: 1px solid #111111;
  box-shadow: -0.5rem 0.6rem;
  font-family: "Space Mono";
  font-size: 3vh;
  position: relative;
  width: 100px;
  margin-left:5px;
}

.projects-mobile {
  display: none;
}

.projects {
  height: 75vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.image-container {
  width: 40vw;
  height: 56vh;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 5px;
}

.image {
  width:100%;
  height:100%;
  object-fit: contain;
}

.project-text {
  margin-left: 5px;
}

@media only screen and (max-device-width: 650px) {
  .projects-page-container {
    min-width: unset;
    width: unset;
  }

  .projects-forward img {
    transform: rotate(270deg);
  }
  .projects-back img {
    transform: rotate(90deg);
  }

  .featured-projects {
    flex-direction: column;
  }

  .project {
    flex-direction: column;
  }

  .featured-projects-text {
    width: unset;
  }

  .projects-text {
    max-width: unset;
  }

  .project img {
    margin-left: auto;
    margin-right: auto;
  }

  .projects-desktop {
    display: none;
  }

  .projects-mobile {
    display: block;
  }

  .featured-project-buttons {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-right: 4%;
  }

  .project-team {
    margin-top: -10%;
  }

  .project-text p {
    max-width: unset;
    margin: 5% 10%;
  }

  .view-project-button {
    margin-top: 0;
    margin-bottom: 5%;
  }

  .view-project-div {
    display: flex;
    justify-content: center;
  }

  .projects-title {
    font-size: 6vh;
  }

  .projects-button {
    width: 120px;
    height: 120px;
  }

  .image-container {
    width: 20vw;
    height: 28vh;
  }
  
  .image {
  }
}

